# chain_of_thought_wrapper

./: .flake8  AGIEnhancer.py  Enhanced_MemoryEngine.py  FullAGI_ExpansionModule.py  NeuroMemoryProcessor.py  README.md  SimulatedSelfAssessment.py  chain_of_thought_gui.py  chain_of_thought_wrapper.py  inference_neuroreasoner_1_nr_1_with_cot.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
cot_toolkit/: __init__.py  benchmark.py  cli.py  simple_rag.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_device_metrics.py  test_device_selection.py  test_generation_config.py  test_normalize_answer.py  test_record_history.py
